Fix transactions endpoint
