# models/transaction.go
@@ -13,10 +13,11 @@ type Transaction struct {
 	DeletedAt   *time.Time `gorm:"index" json:"deleted_at,omitempty"`
 	AccountID   uint       `json:"account_id"`
 	Amount      float64    `json:"amount"`
-	ToAccountID uint       `json:"to_account"`
+	ToAccountID uint       `json:"to_account_id"`
 	CategoryID  uint       `json:"category_id"`
+	Datetime    time.Time  `json:"datetime"`
 
-	Account   Account             `gorm:"foreignKey:AccountID" json:"-"`
-	ToAccount Account             `gorm:"foreignKey:ToAccountID" json:"-"`
+	Account   Account             `gorm:"foreignKey:AccountID" json:"account"`
+	ToAccount Account             `gorm:"foreignKey:ToAccountID" json:"to_account"`
 	Category  TransactionCategory `gorm:"foreignKey:CategoryID" json:"-"`
 }
